--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,14 @@ a{
 }
 
 .header{
+    width: 100%;
     height: 92px;
     background-color:#CF2B2B;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
 }
 
 .nome{
@@ -40,7 +45,8 @@ a{
 }
 
 .produtos{
-    margin-bottom: 16px;
+    margin-top: 123px;
+    margin-bottom: 108px;
 }
 
 .produtos p:nth-child(1){
@@ -76,6 +82,7 @@ a{
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     border-radius: 9px;
     margin-right: 16px;
+    position: relative;
 }
 
 .nome_prato{
@@ -105,6 +112,14 @@ a{
     margin-top: 10px;
 }
 
+.check{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    width: 15px;
+    height: 15px;
+}
+
 .footer{
     position: fixed;
     left: 0;
@@ -115,17 +130,28 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 16px;
 }
 
-.footer button{
+button{
     width: 364px;
     height: 61px;
     background: #CBCBCB;
     border-radius: 50px;
     color: #FFFFFF;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
 }
 
 .pratoSelecionado, .bebidaSelecionada, .sobremesaSelecionada{
     border: #32B72F 3px solid;
+}
+
+.desabilitado{
+    display: none;
+}
+
+.botaoHabilitado{
+    font-weight: 700;
+    background-color: #32B72F;
 }
