--- a/css/style.css
+++ b/css/style.css
@@ -73,16 +73,30 @@ a{
 
 .produto{
     min-width: 172px;
+    max-width: 172px;
     background-color: #FFFFFF;
     /*display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;*/
-    padding: 10px 0px 0px 10px;
+    padding: 10px 0px 0px 14px;
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
     border-radius: 9px;
     margin-right: 16px;
     position: relative;
+}
+
+.img_produto{
+    position: relative;
+}
+
+img{
+    position: absolute;
+    left:0;
+    top: 0;
+    width: 144px;
+    height: 87px;
+    border-radius: 4px;
 }
 
 .nome_prato{
@@ -90,12 +104,11 @@ a{
     font-size: 16px;
     line-height: 19px;
     color: #333333;
-    margin: 8px 0 4px 0;
+    margin: 98px 0 4px 0;
 }
 
 .produto span{
     display: flex;
-    padding: 0px 15px 0px 0px;
     font-weight: 300;
     font-size: 15px;
     color: #A6A6A6;
@@ -118,6 +131,7 @@ a{
     bottom: 10px;
     width: 15px;
     height: 15px;
+    color: #32B72F;
 }
 
 .footer{
@@ -147,7 +161,7 @@ button{
     border: #32B72F 3px solid;
 }
 
-.desabilitado{
+.pratoDesabilitado, .bebidaDesabilitada, .sobremesaDesabilitada{
     display: none;
 }
 
