--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ a{
     text-decoration: none;
 }
 
+
 .header{
     width: 100%;
     height: 92px;
@@ -146,7 +147,7 @@ img{
     align-items: center;
 }
 
-button{
+.fazerPedido{
     width: 364px;
     height: 61px;
     background: #CBCBCB;
@@ -161,11 +162,116 @@ button{
     border: #32B72F 3px solid;
 }
 
-.pratoDesabilitado, .bebidaDesabilitada, .sobremesaDesabilitada{
+.pratoDesabilitado, .bebidaDesabilitada, .sobremesaDesabilitada, .escolhendo{
     display: none;
 }
 
 .botaoHabilitado{
     font-weight: 700;
     background-color: #32B72F;
+}
+
+.confirmarPedido{
+    
+    position: fixed;
+    width: 377px;
+    height: 353px;
+    left: 19px;
+    top: 30%;
+    background: #50D074;
+    color: #FFFFFF;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 9px;
+    border: none;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
+    position: absolute;
+    top: 21px;
+    left: 80px;
+}
+
+.itens{
+    width: 100%;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0.018em;
+    color: #FFFFFF;
+    position: absolute;
+    top: 76px;
+    left: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.itens p{
+    margin-bottom: 10px;
+}
+.itens p:nth-child(odd){
+    width: 50%;
+    text-align:start;
+    margin-left: 15px;
+}
+
+.itens p:nth-child(even){
+    width: 40%;
+    text-align:end;
+    margin-right: 15px;
+}
+
+.pedir{
+    width: 333px;
+    height: 52px;
+    background-color: #FFFFFF;
+    color: #50D074;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    border: none;
+    position: absolute;
+    bottom: 60px;
+    left: 20px;
+}
+
+.cancelar{
+    color: #FFFFFF;
+    position: absolute;
+    width: 333px;
+    height: 52px;
+    left: 140px;
+    bottom: 5px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+
+.blur{
+    /*backdrop-filter: blur(2px);*/
 }
